# CppFunComp

./: .gitignore  CMakeLists.txt  README.md
Tests/: CMakeLists.txt  Test_1.cpp  funcompTest.cpp
cmake/modules/: catch2.cmake
include/: funcomp.h
lib/: CMakeLists.txt  fun.cpp  funcomp.hpp
